refactor: change "flavor list" to "flavors"
