# spec/openapi.yaml
@@ -1,13 +1,13 @@
 openapi: 3.0.0
 info:
   description: "A simple Express API"
-  title: "Flavor List API"
+  title: "Flavors API"
   version: "1.0.0"
 servers:
   - url: http://dev.api.com
   - url: http://prod.api.com
 tags:
-  - name: Flavor List
+  - name: Flavors
 components:
   schemas:
     FlavorItemDto:
@@ -53,14 +53,15 @@ components:
         ingredients: honey, egg yolk, coffee soil
         name: budget breakfast
 paths:
-  /flavor-list:
+  /flavors:
     get:
-      summary: Returns the flavor list
+      operationId: flavorsControllerFindAll
+      summary: Read the flavors
       tags:
-        - Flavor List
+        - Flavors
       responses:
         200:
-          description: The flavor list
+          description: OK
           content:
             application/json:
               schema:
@@ -68,9 +69,10 @@ paths:
                 items:
                   $ref: "#/components/schemas/FlavorItemDto"
     post:
-      summary: Create a new flavor item
+      operationId: flavorsControllerCreate
+      summary: Create a new flavor
       tags:
-        - Flavor List
+        - Flavors
       requestBody:
         required: true
         content:
@@ -78,19 +80,32 @@ paths:
             schema:
               $ref: "#/components/schemas/FlavorItemCreateDto"
       responses:
-        200:
-          description: The flavor item was successfully created
+        400:
+          description: Bad Request
           content:
             application/json:
-              schema:
-                $ref: "#/components/schemas/FlavorItemDto"
-        500:
-          description: Some server error
-  /flavor-list/{id}:
+              examples:
+                BadRequestException:
+                  value:
+                    status_code: 400
+                    message: string
+                    error: Bad Request
+        409:
+          description: Conflict
+          content:
+            application/json:
+              examples:
+                ConflictException:
+                  value:
+                    status_code: 409
+                    message: string
+                    error: Conflict
+  /flavors/{id}:
     get:
-      summary: Get the flavor item by ID
+      operationId: flavorsControllerFindOne
+      summary: Read the flavor by ID
       tags:
-        - Flavor List
+        - Flavors
       parameters:
         - in: path
           name: id
@@ -99,17 +114,36 @@ paths:
             type: string
       responses:
         200:
-          description: The flavor item description by ID
+          description: OK
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/FlavorItemDto"
+        400:
+          description: Bad Request
+          content:
+            application/json:
+              examples:
+                BadRequestException:
+                  value:
+                    status_code: 400
+                    message: string
+                    error: Bad Request
         404:
-          description: The flavor item was not found
+          description: Not Found
+          content:
+            application/json:
+              examples:
+                NotFoundException:
+                  value:
+                    status_code: 404
+                    message: string
+                    error: Not Found
     patch:
-      summary: Update the flavor item by ID
+      operationId: flavorsControllersUpdate
+      summary: Update the flavor by ID
       tags:
-        - Flavor List
+        - Flavors
       parameters:
         - in: path
           name: id
@@ -124,19 +158,46 @@ paths:
               $ref: "#/components/schemas/FlavorItemUpdateDto"
       responses:
         200:
-          description: The flavor item was updated
+          description: OK
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/FlavorItemDto"
+        400:
+          description: Bad Request
+          content:
+            application/json:
+              examples:
+                BadRequestException:
+                  value:
+                    status_code: 400
+                    message: string
+                    error: Bad Request
         404:
-          description: The flavor item was not found
-        500:
-          description: Some server error
+          description: Not Found
+          content:
+            application/json:
+              examples:
+                NotFoundException:
+                  value:
+                    status_code: 404
+                    message: string
+                    error: Not Found
+        409:
+          description: Conflict
+          content:
+            application/json:
+              examples:
+                ConflictException:
+                  value:
+                    status_code: 409
+                    message: string
+                    error: Conflict
     delete:
-      summary: Remove the flavor item by ID
+      operationId: flavorsControllerDelete
+      summary: Delete the flavor by ID
       tags:
-        - Flavor List
+        - Flavors
       parameters:
         - in: path
           name: id
@@ -145,6 +206,26 @@ paths:
             type: string
       responses:
         200:
-          description: The flavor item was deleted
+          description: OK
+        204:
+          description: No Content
+        400:
+          description: Bad Request
+          content:
+            application/json:
+              examples:
+                BadRequestException:
+                  value:
+                    status_code: 400
+                    message: string
+                    error: Bad Request
         404:
-          description: The flavor item was not found
+          description: Not Found
+          content:
+            application/json:
+              examples:
+                NotFoundException:
+                  value:
+                    status_code: 404
+                    message: string
+                    error: Not Found
